# tap-home

./: README.md  pyproject.toml  setup.py
esp/: buzzer.py  conexao.py  leds.py  main.py  rotina.py
postman/: CF - Handle.postman_collection.json
src/app/: main.py
src/database/: tables.py
src/routing/preference/: exceptions.py  router.py  schemas.py  service.py
src/routing/routine/: exceptions.py  router.py  schemas.py  service.py  utils.py
src/routing/tags/: router.py  schemas.py  service.py
tests/: test_main.py
tests/cassettes/: test_lifespan.yaml
