[project]
name = "cf-handler"
version = "0.1.0"
description = "API CRUD em Python usando FastAPI e SQLAlchemy"
authors = [
    { name = "Thales" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "sqlalchemy==2.0.43",
    "aiosqlite==0.21.0",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=./src --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
pythonpath = [
  "."
]
testpaths = [
    "tests"
]
env = [
    "APP_HOST=localhost",
    "APP_PORT=8000",
]
